fixed scrollbar border rendering

--- a/src/Traisi.Questions/src/travel-diary/travel-diary-question.component.scss
+++ b/src/Traisi.Questions/src/travel-diary/travel-diary-question.component.scss
@@ -12,7 +12,7 @@
 
 .travel-diary-question::-webkit-scrollbar-thumb {
 	background-color: #346cb0;
-	outline: 1px solid #304690;
+	// outline: 1px solid #304690;
 	border-radius: 5px;
 }
 
